# financial_webscrap

./: .gitignore  20250801_scrapping_news.py  20250811_NLP_Analysis_Macro_full_text.docx  20250811_scraping_3pass.py  20250811_scrapping_news.py  20250813_headless_playwright.py  20250813_headless_playwright2.py  20250813_scrapping_news_newmethod.py  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TODO_transcript_coverage.md  _analysis_merged.py  _check_wb_final.py  _check_wb_status.py  _convert_research4.py  _expand_cdx_deep.py  _fill_alphastreet_gaps.py  _fill_wayback_gaps.py  _merge_parquets.py  _probe_rev.py  debug_blocked_10.html  debug_noresults_0.html  discovered_urls.csv  failures_after_pass2.csv  news_3pass.parquet  webscrap_guidelines.txt
financial_scraper/: .gitignore  DOCUMENTATION.md  README.md  _run_50.py  pyproject.toml
financial_scraper/config/: commodities_300.txt  commodities_50.txt  commodities_companies.csv  commodity_data_sources.csv  exclude_domains.txt  ml_futures_paper_queries.txt  patent_targets.json  queries_example.txt  tchina_clean.txt  test_commodities.txt  test_commodities2.txt  test_commodities3.txt  us10002_active_tickers.txt
financial_scraper/docs/: patent_data_sources.md
financial_scraper/examples/: 01_search_text.ipynb  02_search_news.ipynb  03_crawl_urls.ipynb  04_transcripts.ipynb
financial_scraper/scripts/: _build_commodity_seeds.py  _build_review_report.py  _build_sentiment_report.py  _deep_crawl_missing.py  _download_paper_pdfs.py  _fetch_crowding_papers.py  _fetch_cta_papers.py  _fetch_factor_alpha_papers.py  _fetch_factor_conditioning_papers.py  _fetch_ga_ml_papers.py  _fetch_inst_ownership_papers.py  _fetch_kg_equities_papers.py  _fetch_quant_macro_papers.py  _fetch_research_papers.py  _fetch_sentiment_papers.py  _fetch_short_interest_papers.py  _fetch_statarb_papers.py  _filter_papers.py  _parse_data_sources.py  _reshape_data_sources.py  _reshape_research_papers.py  _reshape_to_merged.py  _run_commodity_crawls.py  _run_data_source_crawl.py  _taxonomy_equity_sentiment.py  _taxonomy_factor_alpha.py  _taxonomy_factor_broad.py  _taxonomy_generic.py  _taxonomy_kg_equities.py  _taxonomy_quant_macro.py  _zip_readable_pdfs.py  bulk_patents.py
financial_scraper/src/financial_scraper/: __init__.py  (+12 more)
financial_scraper/tests/: conftest.py  test_checkpoint.py  test_clean.py  test_client.py  test_config.py  test_crawl_pipeline.py  test_date_filter.py  test_dedup.py  test_fingerprints.py  test_fmp_source.py  test_futures.py  test_html_extractor.py  test_links.py  test_main.py  test_markdown.py  test_mcp_server.py  test_output.py  test_pdf_extractor.py  test_pipeline.py  test_query_expand.py  test_robots.py  test_search.py  test_throttle.py  test_tor.py  test_transcripts.py
(+63 files in other folders)
