[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-scraper"
version = "0.1.0"
description = "Ethical, async web scraper for financial research - DuckDuckGo search, trafilatura extraction, Parquet output"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "HydrAI"},
]
keywords = ["scraper", "financial", "ethical", "web-scraping", "trafilatura"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Office/Business :: Financial",
    "Topic :: Text Processing :: General",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
]
dependencies = [
    "duckduckgo-search>=8.0",
    "aiohttp>=3.9",
    "aiohttp-socks>=0.8",
    "aiolimiter>=1.1",
    "trafilatura>=2.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pdfplumber>=0.10",
    "pyarrow>=15.0",
    "pandas>=2.0",
    "chardet>=5.0",
    "tenacity>=8.0",
    "stem>=1.8",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-cov"]
mcp = ["mcp>=1.0"]

[project.scripts]
financial-scraper = "financial_scraper.main:main"
financial-scraper-mcp = "financial_scraper.mcp:start_server"

[project.urls]
Homepage = "https://github.com/HydrAI/financial-scraper"
Repository = "https://github.com/HydrAI/financial-scraper"
Issues = "https://github.com/HydrAI/financial-scraper/issues"
Documentation = "https://github.com/HydrAI/financial-scraper#readme"

[tool.setuptools.packages.find]
where = ["src"]
